# idc

./: Cargo.toml
src/: error.rs  fs.rs  json.rs  lib.rs  log.rs  parse.rs  result.rs  xml.rs
src/fs/: fn_cp.rs  fn_fappend.rs  fn_fcreate.rs  fn_fopen.rs  fn_glob.rs  fn_glob_in.rs  fn_mkdir_p.rs  path_extras.rs
src/json/: fn_parse_json_file.rs  fn_write_json_file.rs
src/xml/: fn_parse_xml_file.rs
